--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "php-http/mock-client": "~1.0",
         "guzzlehttp/psr7": "~1.2",
         "friendsofphp/php-cs-fixer": "^2.3",
-        "scrutinizer/ocular": "^1.3"
+        "scrutinizer/ocular": "^1.3",
+        "php-http/logger-plugin": "^1.0"
     },
     "autoload": {
         "psr-4": {
